--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -1,3 +1,3 @@
-{%- for key, value in azure_pipelines_agent_ctl_agent_env.items() -%}
-{{ key }}={{ value }}
+{%- for k, v in azure_pipelines_agent_ctl_agent_env.items() -%}
+{{ k }}={{ v }}
 {% endfor -%}
